--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -340,6 +340,10 @@
     // @include(991)  {
     //   justify-content: flex-start;
     // }
+    @include sm{
+      gap: 0 20px;
+      justify-content: center;
+    }
     @include md{
       gap: 0 20px;
       justify-content: center;
